syntax = "proto3";

package order;

option go_package = "github.com/pansani/order-list-go/pb";

service OrderService {
	rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
	rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message ListOrdersRequest {}

message ListOrdersResponse {
	repeated Order orders = 1;
}

message CreateOrderRequest {
	int32 user_id = 1;
	int32 product_id = 2;
	int32 quantity = 3;
	string status = 4;
}

message CreateOrderResponse {
	Order order = 1;
}

message Order {
	int32 id = 1;
	int32 user_id = 2;
	int32 product_id = 3;
	int32 quantity = 4;
	string status = 5;
	string created_at = 6;
	string updated_at = 7;
}

